migrate controller layer tests to JUnit 5