@@ -1,7 +1,7 @@
 /*
  * ItemRestControllerTest.java
  *
- * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2022 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -24,8 +24,8 @@ import org.interactiverobotics.grocery.domain.Item;
 import org.interactiverobotics.grocery.exception.ItemNotFoundException;
 import org.interactiverobotics.grocery.form.ItemForm;
 import org.interactiverobotics.grocery.service.ItemService;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,33 +34,27 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.hasSize;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 /**
  * Item REST controller test.
  * Tests Controller with mocked Service.
  */
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @WebMvcTest(ItemRestController.class)
 public class ItemRestControllerTest {
 
@@ -76,14 +70,13 @@ public class ItemRestControllerTest {
 
 
     @Test
-    public void testGetItems() throws Exception {
-
-        final List<Item> existingItems = Arrays.asList(new Item(1L, "test-item-1"), new Item(2L, "test-item-2"));
+    public void getItems_returnsItems() throws Exception {
+        List<Item> existingItems = List.of(new Item(1L, "test-item-1"), new Item(2L, "test-item-2"));
         when(itemService.getItems()).thenReturn(existingItems);
 
-        mvc.perform(get(ITEM_ENDPOINT).accept(MediaType.APPLICATION_JSON_UTF8))
+        mvc.perform(get(ITEM_ENDPOINT).accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$", hasSize(2)))
                 .andExpect(jsonPath("$[0].id", is(existingItems.get(0).getId().intValue())))
                 .andExpect(jsonPath("$[0].name", is(existingItems.get(0).getName())))
@@ -92,68 +85,67 @@ public class ItemRestControllerTest {
     }
 
     @Test
-    public void testGetItemsPage() throws Exception {
-
-        final List<Item> existingItems = new ArrayList<>();
+    public void getItemsPage_returnsPageOfItems() throws Exception {
+        List<Item> existingItems = new ArrayList<>();
         for (long i = 0; i < 100; i ++) {
             existingItems.add(new Item(i, "test-item-" + i));
         }
 
         when(itemService.getItems(any(Pageable.class))).thenAnswer(invocation -> {
             assertEquals(1, invocation.getArguments().length);
-            final Pageable pageable = invocation.getArgument(0);
+            Pageable pageable = invocation.getArgument(0);
             return new PageImpl<>(existingItems, pageable, existingItems.size());
         });
 
-        mvc.perform(get(ITEM_ENDPOINT + "list?page=1&size=10").accept(MediaType.APPLICATION_JSON_UTF8))
+        mvc.perform(get(ITEM_ENDPOINT + "list?page=1&size=10").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.totalElements", is(existingItems.size())))
                 .andExpect(jsonPath("$.totalPages", is(10)))
                 .andExpect(jsonPath("$.size", is(10)));
     }
 
     @Test
-    public void testGetItemById() throws Exception {
-
-        final Item existingItem = new Item(1L, "test-item");
+    public void getItemById_returnsItem() throws Exception {
+        Item existingItem = new Item(1L, "test-item");
         when(itemService.getItemById(existingItem.getId())).thenReturn(existingItem);
 
-        mvc.perform(get(ITEM_ENDPOINT + existingItem.getId()).accept(MediaType.APPLICATION_JSON_UTF8))
+        mvc.perform(get(ITEM_ENDPOINT + existingItem.getId()).accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(existingItem.getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(existingItem.getName())));
-    }
-
-    @Test(expected = Exception.class)
-    public void testGetNotExistingItemById() throws Exception {
-
-        when(itemService.getItemById(any())).thenThrow(new ItemNotFoundException(-1L));
-
-        mvc.perform(get(ITEM_ENDPOINT + new Long(999L)).accept(MediaType.APPLICATION_JSON_UTF8));
     }
 
     @Test
-    public void testGetItemByName() throws Exception {
+    public void getItemById_whenItemDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(itemService.getItemById(any())).thenThrow(new ItemNotFoundException(-1L));
 
-        final Item existingItem = new Item(1L, "test-item");
+            mvc.perform(get(ITEM_ENDPOINT + Long.valueOf(999L)).accept(MediaType.APPLICATION_JSON));
+        });
+    }
+
+    @Test
+    public void getItemByName_returnsItem() throws Exception {
+        Item existingItem = new Item(1L, "test-item");
         when(itemService.getItemByName(existingItem.getName())).thenReturn(existingItem);
 
         mvc.perform(get(ITEM_ENDPOINT + "search?name=" + existingItem.getName())
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(existingItem.getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(existingItem.getName())));
     }
 
-    @Test(expected = Exception.class)
-    public void testGetNotExistingItemByName() throws Exception {
+    @Test
+    public void getItemByName_whenItemDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(itemService.getItemByName(any())).thenThrow(new ItemNotFoundException(-1L));
 
-        when(itemService.getItemByName(any())).thenThrow(new ItemNotFoundException(-1L));
-
-        mvc.perform(get(ITEM_ENDPOINT + "search?name=test").accept(MediaType.APPLICATION_JSON_UTF8));
+            mvc.perform(get(ITEM_ENDPOINT + "search?name=test").accept(MediaType.APPLICATION_JSON));
+        });
     }
 
 
@@ -166,9 +158,9 @@ public class ItemRestControllerTest {
         }
 
         @Override
-        public Item answer(InvocationOnMock invocation) throws Throwable {
+        public Item answer(InvocationOnMock invocation) {
             assertEquals(1, invocation.getArguments().length);
-            final ItemForm form = invocation.getArgument(0);
+            ItemForm form = invocation.getArgument(0);
             item = new Item(1L, form.getName());
             return item;
         }
@@ -176,19 +168,20 @@ public class ItemRestControllerTest {
 
 
     @Test
-    public void testCreateItem() throws Exception {
-
-        final CreateItemAnswer createItemAnswer = new CreateItemAnswer();
+    public void createItem_createsAndReturnsItem() throws Exception {
+        CreateItemAnswer createItemAnswer = new CreateItemAnswer();
         when(itemService.createItem(any(ItemForm.class))).then(createItemAnswer);
 
         mvc.perform(post(ITEM_ENDPOINT)
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"name\":\"test-item\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(createItemAnswer.getItem().getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(createItemAnswer.getItem().getName())));
+
+        verify(itemService).createItem(any(ItemForm.class));
     }
 
 
@@ -205,14 +198,13 @@ public class ItemRestControllerTest {
         }
 
         @Override
-        public Item answer(InvocationOnMock invocation) throws Throwable {
-
+        public Item answer(InvocationOnMock invocation) {
             assertEquals(2, invocation.getArguments().length);
 
-            final Long id = invocation.getArgument(0);
+            Long id = invocation.getArgument(0);
             assertEquals(item.getId(), id);
 
-            final ItemForm form = invocation.getArgument(1);
+            ItemForm form = invocation.getArgument(1);
             item.setName(form.getName());
 
             return item;
@@ -221,48 +213,50 @@ public class ItemRestControllerTest {
 
 
     @Test
-    public void testUpdateItem() throws Exception {
-
-        final Item existingItem = new Item(1L, "test-item");
-        final UpdateItemAnswer updateItemAnswer = new UpdateItemAnswer(existingItem);
+    public void updateItem_updatesAndReturnsItem() throws Exception {
+        Item existingItem = new Item(1L, "test-item");
+        UpdateItemAnswer updateItemAnswer = new UpdateItemAnswer(existingItem);
         when(itemService.updateItem(eq(existingItem.getId()), any(ItemForm.class))).then(updateItemAnswer);
 
         mvc.perform(post(ITEM_ENDPOINT + existingItem.getId())
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"name\":\"updated-test-item\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(updateItemAnswer.getItem().getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(updateItemAnswer.getItem().getName())));
-    }
 
-    @Test(expected = Exception.class)
-    public void testUpdateNotExistingItem() throws Exception {
-
-        when(itemService.updateItem(any(), any())).thenThrow(new ItemNotFoundException(-1L));
-
-        mvc.perform(post(ITEM_ENDPOINT + new Long(999L))
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
-                .content("{\"name\":\"updated-test-item\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8));
+        verify(itemService).updateItem(eq(existingItem.getId()), any(ItemForm.class));
     }
 
     @Test
-    public void testDeleteItem() throws Exception {
+    public void updateItem_whenItemDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(itemService.updateItem(any(), any())).thenThrow(new ItemNotFoundException(-1L));
 
-        final Long id = 1L;
+            mvc.perform(post(ITEM_ENDPOINT + Long.valueOf(999L))
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content("{\"name\":\"updated-test-item\"}")
+                    .accept(MediaType.APPLICATION_JSON));
+        });
+    }
 
-        mvc.perform(delete(ITEM_ENDPOINT + id).accept(MediaType.APPLICATION_JSON_UTF8));
+    @Test
+    public void deleteItem_deletesItem() throws Exception {
+        Long id = 1L;
+
+        mvc.perform(delete(ITEM_ENDPOINT + id).accept(MediaType.APPLICATION_JSON));
 
         verify(itemService).deleteItem(eq(id));
     }
 
-    @Test(expected = Exception.class)
-    public void testDeleteNotExistingItem() throws Exception {
+    @Test
+    public void deleteItem_whenItemDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            doThrow(new ItemNotFoundException(-1L)).when(itemService).deleteItem(any());
 
-        doThrow(new ItemNotFoundException(-1L)).when(itemService).deleteItem(any());
-
-        mvc.perform(delete(ITEM_ENDPOINT + new Long(999L)).accept(MediaType.APPLICATION_JSON_UTF8));
+            mvc.perform(delete(ITEM_ENDPOINT + Long.valueOf(999L)).accept(MediaType.APPLICATION_JSON));
+        });
     }
 }
