@@ -1,7 +1,7 @@
 /*
  * ShoppingListRestControllerTest.java
  *
- * Copyright (C) 2016-2018 Pavel Prokhorov (pavelvpster@gmail.com)
+ * Copyright (C) 2016-2022 Pavel Prokhorov (pavelvpster@gmail.com)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -24,8 +24,8 @@ import org.interactiverobotics.grocery.domain.ShoppingList;
 import org.interactiverobotics.grocery.exception.ShoppingListNotFoundException;
 import org.interactiverobotics.grocery.form.ShoppingListForm;
 import org.interactiverobotics.grocery.service.ShoppingListService;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,33 +34,27 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.hasSize;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 /**
  * ShoppingList REST controller test.
  * Tests Controller with mocked Service.
  */
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @WebMvcTest(ShoppingListRestController.class)
 public class ShoppingListRestControllerTest {
 
@@ -76,15 +70,14 @@ public class ShoppingListRestControllerTest {
 
 
     @Test
-    public void testGetShoppingLists() throws Exception {
-
-        final List<ShoppingList> existingShoppingList = Arrays.asList(
+    public void getShoppingLists_returnsShoppingLists() throws Exception {
+        List<ShoppingList> existingShoppingList = List.of(
                 new ShoppingList(1L, "test-shopping-list-1"), new ShoppingList(2L, "test-shopping-list-2"));
         when(shoppingListService.getShoppingLists()).thenReturn(existingShoppingList);
 
-        mvc.perform(get(SHOPPING_LIST_ENDPOINT).accept(MediaType.APPLICATION_JSON_UTF8))
+        mvc.perform(get(SHOPPING_LIST_ENDPOINT).accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$", hasSize(2)))
                 .andExpect(jsonPath("$[0].id", is(existingShoppingList.get(0).getId().intValue())))
                 .andExpect(jsonPath("$[0].name", is(existingShoppingList.get(0).getName())))
@@ -93,70 +86,69 @@ public class ShoppingListRestControllerTest {
     }
 
     @Test
-    public void testGetShoppingListsPage() throws Exception {
-
-        final List<ShoppingList> existingShoppingLists = new ArrayList<>();
+    public void getShoppingListsPage_returnsPageOfShoppingLists() throws Exception {
+        List<ShoppingList> existingShoppingLists = new ArrayList<>();
         for (long i = 0; i < 100; i ++) {
             existingShoppingLists.add(new ShoppingList(i, "test-shopping-list-" + i));
         }
 
         when(shoppingListService.getShoppingLists(any(Pageable.class))).thenAnswer(invocation -> {
             assertEquals(1, invocation.getArguments().length);
-            final Pageable pageable = invocation.getArgument(0);
+            Pageable pageable = invocation.getArgument(0);
             return new PageImpl<>(existingShoppingLists, pageable, existingShoppingLists.size());
         });
 
-        mvc.perform(get(SHOPPING_LIST_ENDPOINT + "list?page=1&size=10").accept(MediaType.APPLICATION_JSON_UTF8))
+        mvc.perform(get(SHOPPING_LIST_ENDPOINT + "list?page=1&size=10").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.totalElements", is(existingShoppingLists.size())))
                 .andExpect(jsonPath("$.totalPages", is(10)))
                 .andExpect(jsonPath("$.size", is(10)));
     }
 
     @Test
-    public void testGetShoppingListById() throws Exception {
-
-        final ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
+    public void getShoppingListById_returnsShoppingList() throws Exception {
+        ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
         when(shoppingListService.getShoppingListById(existingShoppingList.getId())).thenReturn(existingShoppingList);
 
         mvc.perform(get(SHOPPING_LIST_ENDPOINT + existingShoppingList.getId())
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(existingShoppingList.getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(existingShoppingList.getName())));
     }
 
-    @Test(expected = Exception.class)
-    public void testGetNotExistingShoppingListById() throws Exception {
+    @Test
+    public void getShoppingListById_whenShoppingListDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(shoppingListService.getShoppingListById(any())).thenThrow(new ShoppingListNotFoundException(-1L));
 
-        when(shoppingListService.getShoppingListById(any())).thenThrow(new ShoppingListNotFoundException(-1L));
-
-        mvc.perform(get(SHOPPING_LIST_ENDPOINT + new Long(999L)).accept(MediaType.APPLICATION_JSON_UTF8));
+            mvc.perform(get(SHOPPING_LIST_ENDPOINT + Long.valueOf(999L)).accept(MediaType.APPLICATION_JSON));
+        });
     }
 
     @Test
-    public void testGetShoppingListByName() throws Exception {
-
-        final ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
+    public void getShoppingListByName_returnsShoppingList() throws Exception {
+        ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
         when(shoppingListService.getShoppingListByName(existingShoppingList.getName()))
                 .thenReturn(existingShoppingList);
 
         mvc.perform(get(SHOPPING_LIST_ENDPOINT + "search?name=" + existingShoppingList.getName())
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(existingShoppingList.getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(existingShoppingList.getName())));
     }
 
-    @Test(expected = Exception.class)
-    public void testGetNotExistingShoppingListByName() throws Exception {
+    @Test
+    public void getShoppingListByName_whenShoppingListDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(shoppingListService.getShoppingListByName(any())).thenThrow(new ShoppingListNotFoundException(-1L));
 
-        when(shoppingListService.getShoppingListByName(any())).thenThrow(new ShoppingListNotFoundException(-1L));
-
-        mvc.perform(get(SHOPPING_LIST_ENDPOINT + "search?name=test").accept(MediaType.APPLICATION_JSON_UTF8));
+            mvc.perform(get(SHOPPING_LIST_ENDPOINT + "search?name=test").accept(MediaType.APPLICATION_JSON));
+        });
     }
 
 
@@ -169,9 +161,9 @@ public class ShoppingListRestControllerTest {
         }
 
         @Override
-        public ShoppingList answer(InvocationOnMock invocation) throws Throwable {
+        public ShoppingList answer(InvocationOnMock invocation) {
             assertEquals(1, invocation.getArguments().length);
-            final ShoppingListForm form = invocation.getArgument(0);
+            ShoppingListForm form = invocation.getArgument(0);
             shoppingList = new ShoppingList(1L, form.getName());
             return shoppingList;
         }
@@ -179,19 +171,20 @@ public class ShoppingListRestControllerTest {
 
 
     @Test
-    public void testCreateShoppingList() throws Exception {
-
-        final CreateShoppingListAnswer createShoppingListAnswer = new CreateShoppingListAnswer();
+    public void createShoppingList_createsAndReturnsShoppingList() throws Exception {
+        CreateShoppingListAnswer createShoppingListAnswer = new CreateShoppingListAnswer();
         when(shoppingListService.createShoppingList(any(ShoppingListForm.class))).then(createShoppingListAnswer);
 
         mvc.perform(post(SHOPPING_LIST_ENDPOINT)
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"name\":\"test-shopping-list\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(createShoppingListAnswer.getShoppingList().getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(createShoppingListAnswer.getShoppingList().getName())));
+
+        verify(shoppingListService).createShoppingList(any(ShoppingListForm.class));
     }
 
 
@@ -208,14 +201,13 @@ public class ShoppingListRestControllerTest {
         }
 
         @Override
-        public ShoppingList answer(InvocationOnMock invocation) throws Throwable {
-
+        public ShoppingList answer(InvocationOnMock invocation) {
             assertEquals(2, invocation.getArguments().length);
 
-            final Long id = invocation.getArgument(0);
+            Long id = invocation.getArgument(0);
             assertEquals(shoppingList.getId(), id);
 
-            final ShoppingListForm form = invocation.getArgument(1);
+            ShoppingListForm form = invocation.getArgument(1);
             shoppingList.setName(form.getName());
 
             return shoppingList;
@@ -224,49 +216,51 @@ public class ShoppingListRestControllerTest {
 
 
     @Test
-    public void testUpdateShoppingList() throws Exception {
-
-        final ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
-        final UpdateShoppingListAnswer updateShoppingListAnswer = new UpdateShoppingListAnswer(existingShoppingList);
+    public void updateShoppingList_updatesAndReturnsShoppingList() throws Exception {
+        ShoppingList existingShoppingList = new ShoppingList(1L, "test-shopping-list");
+        UpdateShoppingListAnswer updateShoppingListAnswer = new UpdateShoppingListAnswer(existingShoppingList);
         when(shoppingListService.updateShoppingList(eq(existingShoppingList.getId()), any(ShoppingListForm.class)))
                 .then(updateShoppingListAnswer);
 
         mvc.perform(post(SHOPPING_LIST_ENDPOINT + existingShoppingList.getId())
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"name\":\"updated-test-shopping-list\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8))
+                .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON_UTF8))
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath(ID_SELECTOR, is(updateShoppingListAnswer.getShoppingList().getId().intValue())))
                 .andExpect(jsonPath(NAME_SELECTOR, is(updateShoppingListAnswer.getShoppingList().getName())));
-    }
 
-    @Test(expected = Exception.class)
-    public void testUpdateNotExistingShoppingList() throws Exception {
-
-        when(shoppingListService.updateShoppingList(any(), any())).thenThrow(new ShoppingListNotFoundException(-1L));
-
-        mvc.perform(post(SHOPPING_LIST_ENDPOINT + new Long(999L))
-                .contentType(MediaType.APPLICATION_JSON_UTF8)
-                .content("{\"name\":\"updated-test-shopping-list\"}")
-                .accept(MediaType.APPLICATION_JSON_UTF8));
+        verify(shoppingListService).updateShoppingList(eq(existingShoppingList.getId()), any(ShoppingListForm.class));
     }
 
     @Test
-    public void testDeleteShoppingList() throws Exception {
+    public void updateShoppingList_whenShoppingListDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            when(shoppingListService.updateShoppingList(any(), any())).thenThrow(new ShoppingListNotFoundException(-1L));
 
-        final Long id = 1L;
+            mvc.perform(post(SHOPPING_LIST_ENDPOINT + Long.valueOf(999L))
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content("{\"name\":\"updated-test-shopping-list\"}")
+                    .accept(MediaType.APPLICATION_JSON));
+        });
+    }
 
-        mvc.perform(delete(SHOPPING_LIST_ENDPOINT + id).accept(MediaType.APPLICATION_JSON_UTF8));
+    @Test
+    public void deleteShoppingList_deletesShoppingList() throws Exception {
+        Long id = 1L;
+
+        mvc.perform(delete(SHOPPING_LIST_ENDPOINT + id).accept(MediaType.APPLICATION_JSON));
 
         verify(shoppingListService).deleteShoppingList(eq(id));
     }
 
-    @Test(expected = Exception.class)
-    public void testDeleteNotExistingShoppingList() throws Exception {
+    @Test
+    public void deleteShoppingList_whenShoppingListDoesNotExist_throwsException() {
+        assertThrows(Exception.class, () -> {
+            doThrow(new ShoppingListNotFoundException(-1L)).when(shoppingListService).deleteShoppingList(any());
 
-        doThrow(new ShoppingListNotFoundException(-1L)).when(shoppingListService).deleteShoppingList(any());
-
-        mvc.perform(delete(SHOPPING_LIST_ENDPOINT + new Long(999L)).accept(MediaType.APPLICATION_JSON_UTF8));
+            mvc.perform(delete(SHOPPING_LIST_ENDPOINT + new Long(999L)).accept(MediaType.APPLICATION_JSON));
+        });
     }
 }
